# HermesTray

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Hermes.cmake  README.md  build.sh  distribute.sh  format-all.sh
Hermes/Resources/: hermes32.pdn  icon.pdn
Hermes/Source/: app.cpp  app.h  error.cpp  error.h  errormessage.h  globals.h  main.cpp  pch.h  surface.h  system.cpp  system.h  systray.cpp  systray.h  tray.cpp  tray.h
Hermes/Source/SDL/: SDLcpp.h  init.cpp  init.h  misc.cpp  misc.h  surface.cpp  surface.h  tray.cpp  tray.h
Hermes/Source/SDLCPP/: SDLCPP.h  SDLCPP_error.h  SDLCPP_events.h  SDLCPP_filesystem.h  SDLCPP_init.h  SDLCPP_messageboxes.h  SDLCPP_misc.h  SDLCPP_surface.h  SDLCPP_timer.h
Hermes/Source/windows/: windows_system.cpp
Scripts/: run-cmake-debug.sh  run-cmake-release.sh
scripts/: build.sh  cmake-msys.sh  cmds.txt
src/: Window.cpp  Window.h  afk.cpp  aliases.h  app.cpp  app.h  error.h  globals.h  main.cpp  pch.h  surface.h  sys.cpp  sys.h  system.cpp  system.h  systray.cpp  systray.h  timing.h  tray.cpp  tray.h
src/SDLCPP/: SDLCPP.h  SDLCPP_error.h  SDLCPP_events.h  SDLCPP_filesystem.h  SDLCPP_init.h  SDLCPP_messageboxes.h  SDLCPP_misc.h  SDLCPP_surface.h  SDLCPP_timer.h
src/platform/unix/: unix_sys.cpp
src/platform/win/: win_sys.cpp
src/platform/win32/: sys.cpp
src/platform/windows/: windows_sys.cpp
src/windows/: windows_system.cpp
